# halal-image-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/: RELEASE_TEMPLATE.md
.github/workflows/: workflow.yml
src/halal_image_downloader/: cli.py
src/halal_image_downloader/extractors/: __init__.py  base_extractor.py  instagram.py  pinterest.py  reddit.py  twitter.py
src/halal_image_downloader/extractors/instagram/direct/: navigate_download.py
src/halal_image_downloader/extractors/legacy/: instagram_direct.py  pinterest.py
src/halal_image_downloader/extractors/pinterest/: images.py
