[project]
name = "halal-image-downloader"
version = "2025.09.22"
description = "A command-line tool for fast and reliable image downloading from supported sources."
readme = "README.md"
authors = [
    { name = "Asdmir786", email = "asmir.alams.com@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "fake-useragent>=2.2.0",
    "httpx>=0.28.1",
    "pillow>=11.3.0",
    "playwright>=1.55.0",
    "requests>=2.32.5",
]

[project.scripts]
halal-image-downloader = "halal_image_downloader.cli:main"
hi-dlp = "halal_image_downloader.cli:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
